[fix] Double click on Links opens in browser

--- a/news.html
+++ b/news.html
@@ -1,33 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-body {
-  background-color: black;
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
-}
-h2 {
-text-decoration: underline;
-}
-a {
-text-align:center;
-display:block;
-color: red;
-font-size: 20px;
-}
-</style>
-</head>
 <body>
 
 <h1 style="text-align: center;">Welcome to Killing Floor 1</h1>
-<!-- <p style="text-align: center;">Latest news as of: <script> document.write(new Date().toLocaleDateString()); </script></p> -->
 <p style="text-align: center;">Latest news as of: May 8, 2020 </script></p>
-<p>Mut by: <a style="text-align: left;display:inline;font-size:18px" href="https://steamcommunity.com/id/Vel-San/" target="_blank" rel="noopener noreferrer">Vel-San</a></p>
-<hr><br>
+<p>Mut by: <a href="https://steamcommunity.com/id/Vel-San/">Vel-San</a></p>
+<hr>
 <p>Killing Floor Games - Patriarch’s Special 2017</p>
 
-<a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/channel/UC6wcw23XqtvU4eA1oIi69FQ"><img src="https://img.youtube.com/vi/padh-cW2V28/0.jpg"></a>
+<a href="https://www.youtube.com/channel/UC6wcw23XqtvU4eA1oIi69FQ"><img src="https://img.youtube.com/vi/padh-cW2V28/0.jpg"></a>
 
 <div>After many tries, the Patriarch is tired of being outnumbered. So, he’s back again, with more friends than before. This is the Patriarch Special!
 <br>
@@ -37,24 +18,24 @@ With our custom mutator, all participant’s perks will be set to level 2. You a
 
 Feeling blue because you’ve got nobody to gun down Zeds with? Head over to our steam page discussion and find yourself some buddies:
 <br><br>
-<a href="http://steamcommunity.com/groups/KillingFloorGames/discussions/2/133261370020449477/" target="_blank" rel="noopener noreferrer">Steam Community Link</a>
+<a href="http://steamcommunity.com/groups/KillingFloorGames/discussions/2/133261370020449477/" >Steam Community Link</a>
 
 <h2>Like to be more involved?</h2>
 
 We have a KFG steam group where we announce live-streams and keep people updated on events. If you are a player, spectator or just want to stay informed you can join our Steam group at:
 <br><br>
-<a href="http://steamcommunity.com/groups/KillingFloorGames/" target="_blank" rel="noopener noreferrer">Steam KFG Group</a>
+<a href="http://steamcommunity.com/groups/KillingFloorGames/">Steam KFG Group</a>
 
 <h2>Sign-up & live-streams</h2>
 
 During the later stage of the tournament matches will be streamed live on our dedicated Twitch channel which can be found here:
 <br><br>
-<a href="http://steamcommunity.com/groups/KillingFloorGames/" target="_blank" rel="noopener noreferrer">Steam KFG Group</a>
+<a href="http://steamcommunity.com/groups/KillingFloorGames/">Steam KFG Group</a>
 <br><br>
 If you have a Twitch account then you can follow our channel and be alerted the moment the stream starts!
 For more information and to sign-up visit our website:
 <br><br>
-<a href="http://www.killingfloorgames.com/patspecial" target="_blank" rel="noopener noreferrer">KFG Pat-Special</a>
+<a href="http://www.killingfloorgames.com/patspecial">KFG Pat-Special</a>
 <br><br>
 Registration closes on 10 May.
 </div>
