[fix] Fixed missing '|' to <br> conversions

--- a/news.html
+++ b/news.html
@@ -3,12 +3,12 @@
 <body>
 
 <h1 style="text-align: center;">Welcome to Killing Floor 1</h1>
-<p style="text-align: center;">Latest news as of: May 8, 2020 </script></p>
-<p>Mut by: <a href="https://steamcommunity.com/id/Vel-San/">Vel-San</a></p>
+<p style="text-align: center;">Latest news as of: May 8, 2020</p>
+<p>Mut by:</p><a href="https://steamcommunity.com/id/Vel-San/">Vel-San</a>
 <hr>
 <p>Killing Floor Games - Patriarch’s Special 2017</p>
 
-<a href="https://www.youtube.com/channel/UC6wcw23XqtvU4eA1oIi69FQ"><img src="https://img.youtube.com/vi/padh-cW2V28/0.jpg"></a>
+<a href="https://www.youtube.com/channel/UC6wcw23XqtvU4eA1oIi69FQ">YOUTUBE VIDEO LINK</a>
 
 <div>After many tries, the Patriarch is tired of being outnumbered. So, he’s back again, with more friends than before. This is the Patriarch Special!
 <br>
