[fix] Colors, URL Click and font size

--- a/news.html
+++ b/news.html
@@ -2,41 +2,34 @@
 <html>
 <body>
 
-<h1>Welcome to Killing Floor 1</h1>
-<right>Latest news as of: May 8, 2020</right>
-<hr>
-<p>Killing Floor Games - Patriarch's Special 2017</p>
+<h1>Welcome to Killing Floor 1</h1><br><br>
+Latest news as of: May 8, 2020<br><hr><br>
+<p>Killing Floor Games - Patriarch's Special 2017</p><br><br>
 
-<a href="https://www.youtube.com/channel/UC6wcw23XqtvU4eA1oIi69FQ">YOUTUBE VIDEO LINK</a><br><br>
-
+<a href="http://www.youtube.com/channel/UC6wcw23XqtvU4eA1oIi69FQ">YOUTUBE VIDEO LINK</a><br><br>
 After many tries, the Patriarch is tired of being outnumbered. So, he's back again, with more friends than before. This is the Patriarch Special!
 <br>
 With our custom mutator, all participant's perks will be set to level 2. You and your team will be challenged to defeat the Patriarch on suicidal difficulty, or face utter humiliation and shame! You beat him before, can you really do it again?
-<hr>
-<h1>Need a Team?</h1>
+<br><hr><br>
+<h1>Need a Team?</h1><br><br>
 
 Feeling blue because you've got nobody to gun down Zeds with? Head over to our steam page discussion and find yourself some buddies:
 <br><br>
-<a href="http://steamcommunity.com/groups/KillingFloorGames/discussions/2/133261370020449477/">Steam Community Link</a>
-<hr>
-<h1>Like to be more involved?</h1>
+<a href="http://steamcommunity.com/groups/KillingFloorGames/discussions/2/133261370020449477/">Steam Community Link</a><br><hr><br>
+<h1>Like to be more involved?</h1><br><br>
 
 We have a KFG steam group where we announce live-streams and keep people updated on events. If you are a player, spectator or just want to stay informed you can join our Steam group at:
 <br><br>
-<a href="http://steamcommunity.com/groups/KillingFloorGames/">Steam KFG Group</a>
-<hr>
-<h1>Sign-up & live-streams</h1>
+<a href="http://steamcommunity.com/groups/KillingFloorGames/">Steam KFG Group</a><br><hr><br>
+<h1>Sign-up & live-streams</h1><br><br>
 
 During the later stage of the tournament matches will be streamed live on our dedicated Twitch channel which can be found here:
 <br><br>
-<a href="http://steamcommunity.com/groups/KillingFloorGames/">Steam KFG Group</a>
-<hr>
-<br><br>
+<a href="http://steamcommunity.com/groups/KillingFloorGames/">Steam KFG Group</a><br><hr><br>
 If you have a Twitch account then you can follow our channel and be alerted the moment the stream starts!
 For more information and to sign-up visit our website:
 <br><br>
-<a href="http://www.killingfloorgames.com/patspecial">KFG Pat-Special</a>
-<br><br>
+<a href="http://www.killingfloorgames.com/patspecial">KFG Pat-Special</a><br><br>
 Registration closes on 10 May.
 </body>
 </html>
