--- a/news.html
+++ b/news.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
+<!--
+DO NOT INCLUDE A START 'BODY' TAG
+DO NOT DELETE THE FOOTER 'BODY' CLOSE TAG
+DO NOT PUT ANY SCRIPTS
+DO NOT PUT IMAGES
+DO NOT PUT VIDEOS
+-->
 <html>
-<body>
-
 <h1>Welcome to Killing Floor 1</h1><br><br>
 Latest news as of: May 8, 2020<br><hr><br>
 <p>Killing Floor Games - Patriarch's Special 2017</p><br><br>
